# xfce4-applet-cpu

./: Makefile.am  configure.ac.in
icons/16x16/: Makefile.am
icons/24x24/: Makefile.am
icons/32x32/: Makefile.am
icons/48x48/: Makefile.am
panel-plugin/: Makefile.am  applet-cpu.desktop.in  cpu.c  cpu.h  os.c  os.h  properties.c  settings.c
